added benchmark scripts for force-field